--- a/Week-2/Assignment 2.1/style.css
+++ b/Week-2/Assignment 2.1/style.css
@@ -13,7 +13,7 @@ header{
 
 #page-content{
 margin-top: 50px;
-/* display: flex; */
+display: flex;
 justify-content: space-between;
 
 }
@@ -39,4 +39,12 @@ height: 250px;
 
 h3{
     margin-bottom: 0;
+}
+
+#para-2{
+    margin-top: 50px;
+}
+
+form > div{
+    margin-bottom: 20px;
 }
